# gyh_git

./: .dockerignore  .env.example  .gitignore  .traerules  AGENTS.md  CLAUDE.md  MEMORY.md  Makefile  README.md  THINKING.md  USER.md  deploy.sh  docker-compose.yml
project/ice-workbench-new/backend/: pyproject.toml
project/ice-workbench-new/backend/app/: main.py
project/ice-workbench-new/backend/app/core/: aegis.py  config.py  deps.py  errors.py  logging.py  middleware.py  ws_auth.py
project/ice-workbench-new/backend/app/services/: __init__.py
project/ice-workbench-new/backend/scripts/: bootstrap_sandbox_venv.sh  dump_agent_runtime_baseline.py  export_openapi.py
project/ice-workbench-new/backend/tests/: baseline_support.py  conftest.py  test_agent_declarations.py  test_agent_runtime.py  test_error_classifier.py  test_kyuubi_classify.py  test_llm_gateway.py  test_llm_gateway_classify.py  test_memory_decay_safety.py  test_memory_lifecycle.py  test_memory_manager.py  test_memory_ranking.py  test_python_sandbox.py  test_retry_controller.py  test_scaffold_smoke_tmp.py  test_skill_catalog.py  test_skill_overlay.py  test_structured_error_integration.py  test_subagent_feedback.py  test_team_memory.py  test_tool_profiles.py  test_ws_auth.py  test_ws_auth_id_equivalence_pbt.py  test_ws_auth_negotiation_pbt.py  test_ws_auth_paths.py  test_ws_auth_precedence_pbt.py  test_ws_error_envelope_examples.py  test_ws_error_envelope_pbt.py  test_ws_inflight_uniqueness_pbt.py  test_ws_turn_lifecycle.py
project/ice-workbench-new/backend/tests/_baseline/: agent_config.json  (+1 more)
(+2173 files in other folders)
