[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ice-workbench-backend"
version = "3.0.0"
description = "ICE Data Workbench v3 backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",
    "portalocker>=2.10",
    "python-dotenv>=1.0",
    "websockets>=12.0",
    "bleach>=6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "hypothesis>=6",
    "ruff>=0.5",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default argument (FastAPI Depends pattern)
    "SIM108", # ternary instead of if/else — readability tradeoff
    "SIM117", # combine with-statements — not always clearer
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
